# 3D-Mandible-Segmentation

./: .gitignore  README.md
3d-dicom/: CMakeLists.txt  Medical1.cxx
3d-dicom1/: Medical1.cxx
Docs/Report1/report/: abstract.tex  report.tex
Docs/Reports/report/: commands.tex  packages.tex  report.tex
mandible-segmentation/: CMakeLists.txt
mandible-segmentation/cmake/: Qt.cmake
mandible-segmentation/src/: CMakeLists.txt
mandible-segmentation/src/apps/: CMakeLists.txt
mandible-segmentation/src/apps/develop/: CMakeLists.txt  extractSubVol.cpp  rendering3D.cpp  segmentation.cpp  viewProjections.cpp
mandible-segmentation/src/apps/develop/gui-develop/: CMakeLists.txt  SimpleView.cpp  SimpleView.h  SimpleView.ui  main.cpp
mandible-segmentation/src/filters/: ExtractVOI.cpp  ExtractVOI.h  Segmentation.cpp  Segmentation.cpp.autosave.vF3055  Segmentation.h  Thresholding.cpp  Thresholding.h
mandible-segmentation/src/rendering/: Render2D.cpp  Render2D.h  Render3D.cpp  Render3D.h
vtk-dicom-reader/: CMakeLists.txt  ReadDICOMSeries.cxx
